<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_item1"
                    style="@style/scenario_one_header_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_1" />

                <TextView
                    android:id="@+id/tv_item2"
                    style="@style/scenario_one_header_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_2" />

                <TextView
                    android:id="@+id/tv_item3"
                    style="@style/scenario_one_header_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_3" />

                <TextView
                    android:id="@+id/tv_item4"
                    style="@style/scenario_one_header_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_4" />

                <TextView
                    android:id="@+id/tv_item5"
                    style="@style/scenario_one_header_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_5" />
            </LinearLayout>
        </HorizontalScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v4.view.ViewPager
                android:id="@+id/vp_numbers"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <me.relex.circleindicator.CircleIndicator
                android:id="@+id/indicator"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:layout_marginBottom="48dp"
                app:ci_drawable="@color/colorAccent"
                app:ci_drawable_unselected="@color/grey" />
        </RelativeLayout>

        <View style="@style/line_grey" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_view1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/textview1" />

            <TextView
                android:id="@+id/tv_view2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_view1"
                android:layout_centerInParent="true"
                android:padding="8dp"
                android:text="@string/textview2" />

            <TextView
                android:id="@+id/tv_view3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tv_view2"
                android:padding="8dp"
                android:text="@string/textview3" />
        </RelativeLayout>

        <View style="@style/line_grey" />

        <TextView
            android:id="@+id/tv_changing_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp" />

        <View style="@style/line_grey" />

        <LinearLayout
            android:id="@+id/ll_color_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            android:paddingTop="20dp">

            <Button
                android:id="@+id/btn_color_red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/red" />

            <Button
                android:id="@+id/btn_color_green"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/green" />

            <Button
                android:id="@+id/btn_color_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/blue" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>