<resources>
    <string name="app_name">CodeTestOptus</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section:%1$d</string>
    <string name="scenario_one">scerario one</string>
    <string name="scenario_two">scenario two</string>
    <string name="navigation_view_header_title">OPTUS</string>
    <string name="textview1">TextView1</string>
    <string name="textview2">TextView2</string>
    <string name="textview3">TextView3</string>
    <string name="cd_optus_logo">optus logo</string>
    <string name="item_1">item 1</string>
    <string name="item_2">item 2</string>
    <string name="item_3">item 3</string>
    <string name="item_4">item 4</string>
    <string name="item_5">item 5</string>
    <string name="red">red</string>
    <string name="green">green</string>
    <string name="blue">blue</string>
    <string name="mode_of_transport">Mode of Transport:</string>
    <string name="navigate">Navigate</string>
</resources>
